--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start": "cross-env NODE_ENV=development nest start",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,e2e}/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -19,8 +19,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "cross-env": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -39,10 +41,10 @@
     "jest": "28.1.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "tsconfig": "*",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsconfig": "*",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   }
