--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,8 +9,8 @@
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "lint": "eslint \"{src,apps,libs,e2e}/**/*.ts\"",
+    "start:prod": "cross-env NODE_ENV=production node dist/core/main",
+    "lint": "eslint \"**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
