共有パッケージ名を変更

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "tsconfig/apps/tsconfig.api.json",
+  "extends": "@project/tsconfig/apps/tsconfig.api.json",
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./",
