--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,8 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@project/eslint-config-custom": "*",
+    "@project/tsconfig": "*",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
@@ -42,14 +44,12 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint-config-custom": "*",
     "jest": "28.1.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
-    "tsconfig": "*",
     "tsconfig-paths": "4.1.0",
     "typescript": "^4.7.4"
   }
