--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,15 +17,15 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@project/eslint-config-custom": "*",
+    "@project/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/node": "18.8.1",
     "@types/react": "18.0.21",
     "@types/react-dom": "^18.0.6",
-    "eslint-config-custom": "*",
     "eslint-config-next": "^12.3.1",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
-    "tsconfig": "*",
     "typescript": "^4.8.4"
   }
 }
