--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-custom",
+  "name": "@project/eslint-config-custom",
   "version": "0.0.0",
   "private": true,
   "main": "index.js",
