--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,7 +9,7 @@
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/core/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
