--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/*"
   ],
   "scripts": {
+    "build:packages": "turbo run build --filter=@project/*",
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "format": "prettier --check './**/*.{js,jsx,ts,tsx}'",
