--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/prisma",
+  "name": "@project/database",
   "version": "0.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
