--- a/packages/database/.env.example
+++ b/packages/database/.env.example
@@ -1,1 +1,2 @@
+# NOTE: docker-compose.ymlファイル中のデータベース情報を参照
 PRISMA_DATABASE_URL=postgresql://landrepo_user:landrepo_pwd@localhost:5432/landrepo?schema=public
