DB初期設定用のマイグレーション作成

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,6 +5,7 @@
   "types": "dist/index.d.ts",
   "browser": "dist/index-browser.js",
   "scripts": {
+    "prisma": "prisma",
     "prisma:seed": "prisma db seed",
     "prisma:format": "prisma format",
     "prisma:generate": "prisma generate",
