@project/databaseをapps/apiに追加

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "nest": "nest",
-    "prebuild": "rimraf dist",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
     "build": "nest build",
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
@@ -25,6 +26,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.1.6",
+    "@project/database": "*",
     "cross-env": "^7.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
