tsconfig.api.jsonにstrictPropertyInitialization設定

--- a/packages/tsconfig/apps/tsconfig.api.json
+++ b/packages/tsconfig/apps/tsconfig.api.json
@@ -15,6 +15,7 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false
   }
 }
