--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@project/datetime": "*",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
