@project/datetimeはtsupでビルドする

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "dist/index-browser.js",
+  "files": ["dist/**"],
   "scripts": {
     "prisma": "prisma",
     "prisma:seed": "prisma db seed",
