--- a/packages/tsconfig/packages/tsconfig.datetime.json
+++ b/packages/tsconfig/packages/tsconfig.datetime.json
@@ -4,8 +4,8 @@
     "target": "es2017",
     "module": "commonjs",
     "sourceMap": false,
-    "incremental": true,
-    "noEmit": false,
+    "incremental": false,
+    "noEmit": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
