--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@project/eslint-config-custom": "*",
     "eslint": "^8.26.0",
     "prettier": "^2.7.1",
+    "tsup": "^6.3.0",
     "turbo": "^1.6.1"
   }
 }
