--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "main": "index.js",
+  "files": ["index.js"],
   "dependencies": {
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
