--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,8 +12,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.6.4",
+    "@mantine/dates": "^5.6.4",
+    "@mantine/hooks": "^5.6.4",
+    "@mantine/modals": "^5.6.4",
+    "@mantine/next": "^5.6.4",
+    "@mantine/notifications": "^5.6.4",
+    "@mantine/nprogress": "^5.6.4",
     "@project/datetime": "*",
     "next": "13.0.1",
+    "next-seo": "^5.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
