--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@itsumono/react": "^1.0.4",
+    "@itsumono/utils": "^1.6.0",
     "@mantine/core": "^5.6.4",
     "@mantine/dates": "^5.6.4",
     "@mantine/hooks": "^5.6.4",
@@ -21,6 +23,7 @@
     "@mantine/notifications": "^5.6.4",
     "@mantine/nprogress": "^5.6.4",
     "@project/datetime": "*",
+    "envsafe": "^2.0.3",
     "next": "13.0.1",
     "next-seo": "^5.13.0",
     "react": "18.2.0",
