GraphQLでの認証機能等を整備

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,8 +4,8 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "$core/*": [ "core/*"],
-      "$type/*": ["type/*"]
+      "$/*": [ "src/*"],
+      "$generated/*": ["@generated/*"]
     }
   }
 }
