--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/src/main",
     "lint": "eslint \"**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +30,9 @@
     "@nestjs/platform-express": "^9.1.6",
     "@project/database": "*",
     "apollo-server-express": "^3.10.4",
+    "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
     "passport": "^0.6.0",
@@ -45,6 +48,7 @@
     "@nestjs/testing": "^9.1.6",
     "@project/eslint-config-custom": "*",
     "@project/tsconfig": "*",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
