--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,8 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "core",
-    "type"
-  ],
+  "include": ["src", "@generated"],
   "exclude": ["node_modules", "e2e", "dist", "**/*spec.ts"]
 }
