--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -12,6 +12,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "prisma migrate dev --create-only",
     "prisma:migrate:deploy": "prisma migrate deploy",
+    "prebuild": "npm run prisma:format",
     "build": "npm run prisma:generate",
     "typecheck": "tsc --noEmit"
   },
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@project/tsconfig": "*",
     "prisma": "^4.5.0",
+    "prisma-nestjs-graphql": "^17.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
