--- a/packages/tsconfig/packages/tsconfig.database.json
+++ b/packages/tsconfig/packages/tsconfig.database.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "sourceMap": false,
+    "sourceMap": true,
     "incremental": true,
     "noEmit": true,
     "strictNullChecks": true,
