--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
+    "joi": "^17.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
