@project/databaseからprisma-nestjs-graphqlの出力ファイルを参照できるようにする

--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src", "@nestgraphql"],
+  "include": ["src"],
   "exclude": ["node_modules", "e2e", "dist", "**/*spec.ts"]
 }
