--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -4,8 +4,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "$/*": [ "src/*"],
-      "$nestgraphql/*": ["@nestgraphql/*"]
+      "$/*": [ "src/*"]
     }
   }
 }
