--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,7 +41,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.7"
+    "rxjs": "^7.5.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
@@ -56,6 +57,7 @@
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "jest": "28.1.3",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.1",
