--- a/packages/tsconfig/apps/tsconfig.api.json
+++ b/packages/tsconfig/apps/tsconfig.api.json
@@ -16,6 +16,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "importsNotUsedAsValues": "remove"
   }
 }
