--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@project/tsconfig/packages/tsconfig.database.json",
+  "extends": "@project/tsconfig/tsconfig.node.json",
   "include": ["scripts"],
   "compilerOptions": {
     "baseUrl": "./scripts"
