--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_SITE_NAME=landrepo
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/
+NEXT_PUBLIC_API_ENDPOINT=http://localhost:4000/
+NEXT_PUBLIC_API_GRAPHQL_ENDPOINT=http://localhost:4000/graphql/
