--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,21 +13,28 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@itsumono/react": "^1.0.4",
     "@itsumono/utils": "^1.6.0",
     "@mantine/core": "^5.8.2",
     "@mantine/dates": "^5.8.2",
+    "@mantine/form": "^5.8.2",
     "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.8.2",
     "@mantine/next": "^5.8.2",
     "@mantine/notifications": "^5.8.2",
     "@mantine/nprogress": "^5.8.2",
+    "@project/database": "*",
     "@project/datetime": "*",
     "envsafe": "^2.0.3",
+    "graphql": "^16.6.0",
     "next": "13.0.4",
     "next-seo": "^5.14.1",
+    "next-urql": "^4.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "urql": "^3.0.3"
   },
   "devDependencies": {
     "@project/eslint-config-custom": "*",
