--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.0",
     "@project/database": "*",
+    "@project/jwt": "*",
     "apollo-server-express": "^3.10.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -36,7 +37,6 @@
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
     "joi": "^17.7.0",
-    "ms": "^2.1.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
