--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@mantine/nprogress": "^5.8.2",
     "@project/database": "*",
     "@project/datetime": "*",
+    "@project/jwt": "*",
     "envsafe": "^2.0.3",
     "graphql": "^16.6.0",
     "next": "13.0.4",
