--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,6 +29,7 @@
     "@project/jwt": "*",
     "envsafe": "^2.0.3",
     "graphql": "^16.6.0",
+    "jotai": "^1.10.0",
     "next": "13.0.4",
     "next-seo": "^5.14.1",
     "next-urql": "^4.0.0",
