認証周りの整備

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,12 +27,14 @@
     "@project/database": "*",
     "@project/datetime": "*",
     "@project/jwt": "*",
+    "axios": "^1.2.0",
     "envsafe": "^2.0.3",
     "graphql": "^16.6.0",
     "jotai": "^1.10.0",
     "next": "13.0.4",
     "next-seo": "^5.14.1",
     "next-urql": "^4.0.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
@@ -42,6 +44,7 @@
     "@project/eslint-config-custom": "*",
     "@project/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/cookie": "^0.5.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "^18.0.9",
