開発用メーラー環境整備

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,2 +1,9 @@
+# JWT
 NEST_JWT_SECRET_KEY=random-string-of-32-or-more-characters
 NEST_JWT_REFRESH_SECRET_KEY=random-string-of-32-or-more-characters
+
+# Mail (smtp/smtps)
+NEST_MAILER_TRANSPORT_SMTP_HOST=localhost
+NEST_MAILER_TRANSPORT_SMTP_PORT=1025
+NEST_MAILER_TRANSPORT_INCOMING_USER=<user>
+NEST_MAILER_TRANSPORT_INCOMING_PASSWORD=<pass>
