--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^1.8.1",
     "@nestjs/apollo": "^10.1.6",
     "@nestjs/common": "^9.2.0",
     "@nestjs/config": "^2.2.0",
@@ -36,7 +37,9 @@
     "class-validator": "^0.13.2",
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
+    "handlebars": "^4.7.7",
     "joi": "^17.7.0",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -57,6 +60,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "29.2.3",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.12",
