--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,3 +1,5 @@
+NEXT_SITE_BASE_URL=http://localhost:3000/
+
 # JWT
 NEST_JWT_SECRET_KEY=random-string-of-32-or-more-characters
 NEST_JWT_REFRESH_SECRET_KEY=random-string-of-32-or-more-characters
