@project/jwtを@project/authに改名

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,7 +31,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.0",
     "@project/database": "*",
-    "@project/jwt": "*",
+    "@project/auth": "*",
     "apollo-server-express": "^3.10.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
