devコマンドで一斉起動

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,9 +7,7 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "nest build",
-    "start": "cross-env NODE_ENV=development nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
-    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "dev": "cross-env NODE_ENV=development nest start --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"**/*.ts\"",
     "test": "jest",
