JWTデコード(payload部分を取得)のユーティリティ

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,7 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@project/database": "*"
+    "@project/database": "*",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@project/tsconfig": "*",
