エラーメッセージのローカルパッケージ化

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,9 +24,10 @@
     "@mantine/next": "^5.9.2",
     "@mantine/notifications": "^5.9.2",
     "@mantine/nprogress": "^5.9.2",
+    "@project/api-error": "*",
+    "@project/auth": "*",
     "@project/database": "*",
     "@project/datetime": "*",
-    "@project/auth": "*",
     "axios": "^1.2.1",
     "envsafe": "^2.0.3",
     "graphql": "^16.6.0",
