--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,8 +28,9 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
-    "@project/database": "*",
+    "@project/api-error": "*",
     "@project/auth": "*",
+    "@project/database": "*",
     "apollo-server-express": "^3.10.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
