--- a/packages/datetime/package.json
+++ b/packages/datetime/package.json
@@ -17,8 +17,7 @@
     "ms": "^2.1.3"
   },
   "devDependencies": {
-    "@project/tsconfig": "*",
-    "typescript": "^4.9.4"
+    "@project/tsconfig": "*"
   },
   "tsup": {
     "entry": [
