--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.29.0",
     "prettier": "^2.8.1",
     "tsup": "^6.5.0",
-    "turbo": "^1.6.3"
+    "turbo": "^1.6.3",
+    "typescript": "^4.9.4"
   }
 }
