--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -4,7 +4,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "browser": "dist/index-browser.js",
-  "files": ["dist/**"],
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "prisma": "prisma",
     "prisma:seed": "prisma db seed",
@@ -23,8 +25,7 @@
     "@project/tsconfig": "*",
     "prisma": "^4.7.1",
     "prisma-nestjs-graphql": "^17.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.1"
   },
   "prisma": {
     "schema": "prisma/schema.prisma",
