APIエラーの識別子設定

--- a/packages/database/tsconfig.nestgraphql.json
+++ b/packages/database/tsconfig.nestgraphql.json
@@ -3,6 +3,7 @@
   "exclude": ["scripts"],
   "compilerOptions": {
     "noEmit": false,
-    "emitDecoratorMetadata": false
+    "emitDecoratorMetadata": false,
+    "removeComments": false
   }
 }
