--- a/packages/tsconfig/tsconfig.nextjs.json
+++ b/packages/tsconfig/tsconfig.nextjs.json
@@ -6,6 +6,7 @@
     "module": "esnext",
     "jsx": "preserve",
     "incremental": true,
-    "noEmit": true
+    "noEmit": true,
+    "removeComments": true
   }
 }
