--- a/apps/api/tsconfig.build.json
+++ b/apps/api/tsconfig.build.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "include": ["src"],
-  "exclude": ["node_modules", "e2e", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "e2e", "dist", "**/*spec.ts"],
+  "compilerOptions": {
+    "removeComments": true
+  }
 }
