--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,8 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/throttler": "^3.1.0",
     "@project/api-error": "*",
     "@project/auth": "*",
     "@project/database": "*",
@@ -57,6 +59,7 @@
     "@project/eslint-config-custom": "*",
     "@project/tsconfig": "*",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "29.2.4",
     "@types/node": "^18.11.11",
