--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,4 +1,5 @@
-NEXT_SITE_BASE_URL=http://localhost:3000/
+NEST_SITE_BASE_URL=http://localhost:3000/
+NEST_LISTEN_PORT=4000
 
 # JWT
 NEST_JWT_SECRET_KEY=random-string-of-32-or-more-characters
