--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,6 +1,10 @@
 NEST_SITE_BASE_URL=http://localhost:3000/
 NEST_LISTEN_PORT=4000
 
+# Rate Limiting
+NEST_THROTTLE_TTL=10
+NEST_THROTTLE_LIMIT=10
+
 # JWT
 NEST_JWT_SECRET_KEY=random-string-of-32-or-more-characters
 NEST_JWT_REFRESH_SECRET_KEY=random-string-of-32-or-more-characters
