--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "envsafe": "^2.0.3",
     "graphql": "^16.6.0",
     "jotai": "^1.11.1",
+    "lru-cache": "^7.14.1",
     "next": "13.0.6",
     "next-seo": "^5.15.0",
     "next-urql": "^4.0.0",
@@ -39,6 +40,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
+    "request-ip": "^3.3.0",
     "urql": "^3.0.3"
   },
   "devDependencies": {
@@ -46,9 +48,11 @@
     "@project/tsconfig": "*",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
+    "@types/lru-cache": "^7.10.10",
     "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/request-ip": "^0.0.37",
     "eslint-config-next": "^13.0.6",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
