--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,8 @@
 {
   "pipeline": {
     "clean": {
-      "outputs": []
+      "outputs": [],
+      "cache": false
     },
     "build": {
       "dependsOn": ["^build"]
