typescript等アップデート

--- a/packages/tsconfig/tsconfig.base.json
+++ b/packages/tsconfig/tsconfig.base.json
@@ -7,7 +7,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleResolution": "node",
-    "importsNotUsedAsValues": "error"
+    "moduleResolution": "node"
   }
 }
