--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -61,7 +61,6 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "29.2.4",
-    "@types/node": "^18.11.11",
     "@types/nodemailer": "^6.4.6",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
@@ -73,7 +72,6 @@
     "ts-jest": "29.0.3",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "4.1.1",
-    "typescript": "^4.9.4"
+    "tsconfig-paths": "4.1.1"
   }
 }
