--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,13 +49,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/cookie": "^0.5.1",
     "@types/lru-cache": "^7.10.10",
-    "@types/node": "18.11.11",
     "@types/react": "18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/request-ip": "^0.0.37",
     "eslint-config-next": "^13.0.6",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "typescript": "^4.9.4"
+    "jest-environment-jsdom": "^29.3.1"
   }
 }
