--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "devDependencies": {
     "@project/eslint-config-custom": "*",
-    "eslint": "^8.29.0",
-    "prettier": "^2.8.1",
-    "tsup": "^6.5.0",
-    "turbo": "^1.6.3",
-    "typescript": "^4.9.4"
+    "@types/node": "^20.3.2",
+    "eslint": "^8.43.0",
+    "prettier": "^2.8.8",
+    "tsup": "^7.1.0",
+    "turbo": "^1.10.6",
+    "typescript": "^5.1.5"
   }
 }
