--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:api": "npm run build -w apps/api",
     "build:web": "npm run build -w apps/web",
     "build:packages": "turbo run build --filter=@project/*",
-    "dev": "turbo run dev",
+    "dev": "cross-env TZ=UTC turbo run dev",
     "lint": "turbo run lint",
     "test": "turbo run test",
     "typecheck": "turbo run typecheck",
