--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
     "format": "prettier --check './**/*.{js,jsx,ts,tsx}'",
     "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx}'"
   },
+  "dependencies": {
+    "@itsumono/react": "^1.0.4",
+    "@itsumono/utils": "^1.6.1"
+  },
   "devDependencies": {
     "@project/eslint-config-custom": "*",
     "@types/node": "^20.3.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tsup": "^7.1.0",
     "turbo": "^1.10.6",
     "typescript": "^5.1.5"
