--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,53 +18,53 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.5",
     "@nestjs-modules/mailer": "^1.8.1",
-    "@nestjs/apollo": "^10.1.7",
-    "@nestjs/common": "^9.2.1",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.1",
-    "@nestjs/graphql": "^10.1.7",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.1",
-    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/apollo": "^12.0.4",
+    "@nestjs/common": "^10.0.3",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/core": "^10.0.3",
+    "@nestjs/graphql": "^12.0.6",
+    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.3",
+    "@nestjs/schedule": "^3.0.1",
     "@project/api-error": "*",
     "@project/auth": "*",
     "@project/database": "*",
-    "apollo-server-express": "^3.10.4",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "graphql": "^16.6.0",
+    "class-validator": "^0.14.0",
+    "graphql": "^16.7.1",
     "handlebars": "^4.7.7",
-    "joi": "^17.7.0",
-    "nodemailer": "^6.8.0",
+    "joi": "^17.9.2",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.6.0",
+    "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2",
+    "winston": "^3.9.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.5",
-    "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.2.1",
+    "@nestjs/cli": "^10.0.5",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.3",
     "@project/eslint-config-custom": "*",
     "@project/tsconfig": "*",
     "@types/bcrypt": "^5.0.0",
-    "@types/cron": "^2.0.0",
-    "@types/express": "^4.17.14",
-    "@types/nodemailer": "^6.4.6",
-    "@types/passport-jwt": "^3.0.7",
-    "@types/passport-local": "^1.0.34",
+    "@types/cron": "^2.0.1",
+    "@types/express": "^4.17.17",
+    "@types/nodemailer": "^6.4.8",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^9.0.2",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
-    "ts-loader": "^9.4.2",
-    "tsconfig-paths": "4.1.1"
+    "ts-loader": "^9.4.4",
+    "tsconfig-paths": "4.2.0"
   }
 }
